--- a/styles.scss
+++ b/styles.scss
@@ -6,15 +6,12 @@
 // --- STILI GLOBALI ---
 body {
   font-family: 'Lato', sans-serif;
-  color: #000000;
+  color: #000000; /* Nero standard */
   background-color: #ffffff;
-
-  /* FIX MOBILE: Questo rende il font più nitido su iPhone/Mac ed evita l'effetto "finto grassetto" */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
 }
 
-// Link
+// I link colorati //
 a {
   color: #a00414;
   text-decoration: none;
@@ -24,23 +21,9 @@ a:hover {
   text-decoration: underline;
 }
 
-// --- TIPOGRAFIA ---
-
-/* Regola generale per i paragrafi */
-p {
-  line-height: 1.6;
-  font-weight: 300; /* Testo normale sottile */
-}
-
-/* FIX GRASSETTO: Forziamo il browser a usare il peso 700 quando vede un grassetto */
-strong, b {
-  font-weight: 700 !important;
-  color: #000; /* Assicura che sia nero pieno */
-}
-
-/* Titoli */
+// --- TIPOGRAFIA (colore font) ---
 h1, h2, h3, h4 {
-  color: #000000;
+  color: #000000; /* Titoli Neri */
   font-weight: 700;
   margin-top: 1.5em;
   margin-bottom: 0.5em;
@@ -48,20 +31,30 @@ h1, h2, h3, h4 {
 
 h1 {
   font-size: 2.5rem;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #eee; /* Linea grigia sottile sotto il titolo principale */
   padding-bottom: 0.2em;
 }
 
 h2 {
   font-size: 1.75rem;
-  color: #000000;
+  color: #000000; /* Nero anche qui */
 }
 
-// --- SPAZIATURA LISTE (Il fix che abbiamo fatto prima) ---
+p {
+  line-height: 1.6;
+  font-weight: 300;
+}
+
+
+
+/* --- LIST SPACING FIX --- */
+
+/* 1. Add space between the MAIN list items (e.g., between PhD and MS) */
 main ul > li {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem; /* Adjust this number to increase/decrease space */
 }
 
+/* 2. Keep the SUB-items tight (e.g., Date, Supervisor) */
 main ul li ul li {
-  margin-bottom: 0.2rem;
+  margin-bottom: 0.2rem; /* Small space for details */
 }
